# ncnn-mobile

./: .gitmodules
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/ncnn_mobile/: MainActivity.kt
android/app/src/main/java/com/tencent/yolov5ncnn/: YoloV5Ncnn.java
android/app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
android/app/src/test/java/com/example/ncnn_mobile/: ExampleUnitTest.kt
android/ncnn_mobile/app/: build.gradle
android/ncnn_mobile/app/src/androidTest/java/com/example/ncnn_mobile/: ExampleInstrumentedTest.kt
android/ncnn_mobile/app/src/main/: AndroidManifest.xml
android/ncnn_mobile/app/src/main/java/com/example/ncnn_mobile/: MainActivity.kt  YoloV5Ncnn.java
android/ncnn_mobile/app/src/main/res/layout/: activity_main.xml
android/ncnn_mobile/app/src/main/res/values/: strings.xml  themes.xml
android/ncnn_mobile/app/src/main/res/values-night/: themes.xml
android/ncnn_mobile/gradle/wrapper/: gradle-wrapper.properties
ios/: ios-Bridging-Header.h  yolov5_ncnn.cpp  yolov5_ncnn.h
ios/ios/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/ios.xcodeproj/: project.pbxproj
ios/ios.xcodeproj/project.xcworkspace/xcuserdata/otousan.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ios/Base.lproj/: Main.storyboard
ios/ncnn.framework/Versions/A/Headers/ncnn/: platform.h
